--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>YouTube API</title>
+	<title>YouTube API v2.0</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=9" />
@@ -18,6 +18,7 @@
 
 <body>
 	<div class="container">
+		<h1>Youtube API <span>(v2.0)</span></h1>
 		<div class="row">
 			<ul class="thumbnails">
 				<li class="span12">
@@ -65,7 +66,7 @@
 	<!-- SCRiPTS -->
 	<script type="text/javascript" src="js/ytapi.js"></script>
 	<!-- Make the video request -->
-	<script type="text/javascript" src="https://gdata.youtube.com/feeds/api/users/LavljeSrceMedvescak/uploads?max-results=1&orderby=published&v=2&alt=jsonc&callback=showVideo"></script>
+	<script type="text/javascript" src="https://gdata.youtube.com/feeds/api/users/TheGingernet/uploads?max-results=1&orderby=published&v=2&alt=jsonc&callback=showVideo"></script>
 </body><!-- end BODY -->
 
 </html>
