--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>YouTube API v2.0</title>
+	<title>YouTube API v3.0</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=9" />
 	<!-- CSS -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 	<!-- SCRiPTS -->
+	<script type="text/javascript" src="js/ytapi.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" charset="utf-8"></script>
+	<script type="text/javascript" src="https://apis.google.com/js/client.js?onload=onClientLoad"></script>
+	
 	<!--[if IE]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -18,6 +21,7 @@
 
 <body>
 	<div class="container">
+		<pre id="response"></pre>
 		<h1>Youtube API <span>(v2.0)</span></h1>
 		<div class="row">
 			<ul class="thumbnails">
@@ -62,11 +66,6 @@
 		<!-- /.row -->
 	</div>
 	<!-- /.container -->
-
-	<!-- SCRiPTS -->
-	<script type="text/javascript" src="js/ytapi.js"></script>
-	<!-- Make the video request -->
-	<script type="text/javascript" src="https://gdata.youtube.com/feeds/api/users/TheGingernet/uploads?max-results=1&orderby=published&v=2&alt=jsonc&callback=showVideo"></script>
 </body><!-- end BODY -->
 
 </html>
