--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>YouTube API v3.0</title>
+	<title>YouTube API v3</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=9" />
@@ -22,7 +22,7 @@
 <body>
 	<div class="container">
 		<pre id="response"></pre>
-		<h1>Youtube API <span>(v2.0)</span></h1>
+		<h1>Youtube API <span>v3</span></h1>
 		<div class="row">
 			<ul class="thumbnails">
 				<li class="span12">
